# fun-with-mypy

./: README.md  pyproject.toml
examples/: typeddicts.py
mypyfun/typeddict/: plugin.py  types.py
